# text2sql

./: .gitignore  README.md  pyproject.toml
src/: pyproject.toml
src/agent/: __main__.py
src/agent/configs/: logging_config.json
text2sql/: pyproject.toml  setup.py.bak
text2sql/agent/: __main__.py
text2sql/agent/graphs/: main_graph.py
text2sql/agent/states/: graphstates.py
text2sql2/: __main__.py
text2sql2/UI/streamlit/: frontend.py
text2sql2/agent/: run.py
text2sql2/agent/graphs/: main_graph.py
text2sql2/agent/metadata/: DataBases.py  __init__.py
text2sql2/agent/states/: graphstates.py
text2sql2/app/: main.py
text2sql2/notebooks/: db_test.ipynb
