# there are different build systems which can be used
# but setuptools is old one, we can use that

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sql"
version = "0.0.1"
requires-python = ">=3.12"
readme = "README.md"

# there are ways to specify dependencies in a
# more specificway depending on OS
dependencies = [
  "python-json-logger==3.3.0",
  "langgraph==0.3.31"
]

# to run a command in command line
# like in this case
# > text2sql
# command will execute and run below function
[project.scripts]
text2sql = "agent.__main__:main"